feat : 물품 상세조회 구현중